Timesheet/main/default/objects/Project_Employee__c/Project_Employee__c.object-meta.xml
<CustomObject>
    <label>Project Employee</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Project Employee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>