Timesheet/main/default/objects/Project_Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Employee__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>